[tool.poetry]
name = "prepbuzz"
version = "0.1.0"
description = "CAT Questions RAG System for generating educational videos"
authors = ["PrepBuzz Team <team@prepbuzz.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
qdrant-client = "^1.7.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"
pydantic = "^2.5.2"
pydantic-settings = "^2.0.0"
openai = "^1.12.0"
anthropic = "^0.18.0"
requests = "^2.31.0"
opencv-python = "^4.9.0.80"
Pillow = "^10.2.0"
gtts = "^2.4.0"
moviepy = "^1.0.3"
google-api-python-client = "^2.116.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.66.1"
loguru = "^0.7.2"

# Optional free AI dependencies
transformers = {version = "^4.35.0", optional = true}
torch = {version = "^2.0.0", optional = true}
accelerate = {version = "^0.24.0", optional = true}

# Mathematical problem solving dependencies
sympy = "^1.12"
numpy = "^1.24.0"

# Web scraping dependencies (simplified)
# playwright removed - using simple google search only

[tool.poetry.extras]
free-ai = ["transformers", "torch", "accelerate"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prepbuzz = "main:cli"